Fixed Menu positioning to overlap appropriately.

--- a/src/client/styles/main.scss
+++ b/src/client/styles/main.scss
@@ -9,8 +9,6 @@
  *
 */
 #Header {
-  position: fixed;
-  top: 0;
   width: 100%;
   background-color: white;
   @extend %clearfix;
@@ -43,6 +41,7 @@
 
   /* MAIN NAVIGATION */
   .NavMenu {
+  	position: relative;
   	/* Top-level Links Wrapper */
 	  &-TopLevelLinks {
 	  	padding: 0;
@@ -65,19 +64,19 @@
 	  		}
 
 	  		&.active {
-	  			@include up-arrow($BG_MENU_BROWSE_RIGHT, 38%, 'bottom', -5px);
+	  			@include up-arrow($BG_MENU_BROWSE_RIGHT, 33%, 'bottom', -10px, 12px);
 	  		}
 	  	}
 	  }
 
 	  .MegaMenu {
-	  	width: 100%;
 	  	color: #FFFFFF;
 	  	background-color: $BG_MENU_BROWSE_RIGHT;
 
 	  	&--active {
-		  	position: relative;
-		  	top: 4px;
+	  		width: 100%;
+	  		position: absolute;
+		  	top: 34px;
 	  		background-color: $BG_MENU_BROWSE_RIGHT;
 	  	}
 
